<resources>
    <string name="app_name">WalkWalkRevolution</string>

    <string name="stop_btn">Stop</string>>
    <string name="timer">0:00</string>
    <string name="input_height_msg">Input your height below</string>
    <string name="height_save_btn">Save</string>>
    <string name="default_feet">5</string>>
    <string name="default_inches">7</string>

    <!--Route Form/List-->
    <string name="route_details">Route Details</string>
    <string name="route_name">Route Name</string>
    <string name="starting_point">Starting Point</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="steps">Steps</string>
    <string name="distance">Distance</string>
    <string name="colon">:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="choose_route_date">Choose the date of your Route!</string>
    <string name="flat"> <font color="#00ff00"> Flat </font> </string>
    <string name="hilly">Hilly</string>
    <string name="loop">Loop</string>
    <string name="out_back">Out Back</string>
    <string name="street">Street</string>
    <string name="trail">Trail</string>
    <string name="even">Even</string>
    <string name="uneven">Uneven</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="note">Notes</string>

    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <!--Mock Page-->
    <string name="mock">Mock</string>
    <string name="mock_time">Mock Time</string>
    <string name="mock_steps">Add 500 Steps</string>
    <string name="add">Add</string>
    <string name="done">Done</string>

    <!--Team Building-->
    <string name="add_teammate">Add a Teammate!</string>
    <string name="name">Name</string>
    <string name="email">Gmail</string>

    <!--Proposed Walk-->
    <string name="time">Time</string>
    <string name="send">Send</string>
    <string name="propose_walk">Propose Team Walk</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

</resources>
