...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forms.NotesPage">

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="271dp"
        android:layout_height="351dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="#E2F3F3F3"
        android:fontFamily="@font/actor"
        android:gravity="top"
        android:hint="Type your note here..."
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/LinearLayout02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <LinearLayout
...
