<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/addTeammateLayout"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="397dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/actor"
            android:gravity="center|left"
            android:text="@string/add_teammate"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="202dp"
        android:layout_below="@id/addTeammateLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameView"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/actor"
                android:gravity="center|left"
                android:text="@string/name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailView"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/actor"
                android:gravity="center|left"
                android:text="@string/email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"

        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/routes_list_start_button_states"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/routes_list_start_button_states"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>