...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/teammatesHeader"
        />

    <Button
        android:id="@+id/addTeammateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
...
